# JuiceChain

./: .gitattributes  .gitignore  .tmp_scan.json  .tmp_vuln.json  .tmp_vuln_dry.json  CLAUDE.md  README.md  pyproject.toml  report.md  report_new.md  scan.json  scan2.json  scan3.json  scan_new.json  vuln.json  vuln2.json  vuln_new.json
docs/: architecture.md
src/juicechain/cli/: main.py
src/juicechain/core/: alive.py  config.py  dom_xss.py  enumeration.py  http_client.py  info_gather.py  input_point.py  report.py  target.py  vulnerability.py
src/juicechain/data/wordlists/: api.txt  backup.txt  common.txt
src/juicechain/plugins/: __init__.py  auth_bypass.py  base.py  loader.py  open_redirect.py  path_traversal.py  sqli_boolean.py  sqli_error.py  sqli_time.py  xss_reflected.py
src/juicechain/utils/: __init__.py  logging.py  output.py
tests/: test_alive_http.py  test_auth_bypass.py  test_cli_main.py  test_config.py  test_dom_xss_targets.py  test_dom_xss_url.py  test_enumeration.py  test_enumeration_subpath_probe.py  test_http_client.py  test_info_gather.py  test_logging_utils.py  test_output_utils.py  test_report.py  test_route_parsers.py  test_vulnerability_boolean_guard.py  test_vulnerability_boolean_sqli.py  test_vulnerability_checks.py  test_vulnerability_loader.py  test_vulnerability_scan_flow.py  test_wordlists.py
tests/test_plugins/: test_loader.py  test_open_redirect.py  test_path_traversal.py  test_sqli_error_baseline.py  test_sqli_time.py
