[project]
name = "juicechain"
version = "0.4.0"
description = "Pentest automation toolchain for OWASP Juice Shop"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.0",
  "beautifulsoup4>=4.0",
]

[project.scripts]
juicechain = "juicechain.cli.main:main"


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
