[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juicechain"
version = "1.0.0"
description = "JuiceChain: general-purpose Web security testing toolchain"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vitamin-B13" }]
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
juicechain = "juicechain.cli.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5",
  "mypy>=1.7",
]
domxss = [
  "playwright",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
  "requests",
  "requests.*",
  "bs4",
  "bs4.*",
  "tabulate",
  "playwright",
  "playwright.*",
]
ignore_missing_imports = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
juicechain = ["data/wordlists/*.txt"]
